--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import tensorflow as tf\n",
@@ -15,7 +24,7 @@
     "\n",
     "from tqdm import trange\n",
     "from utils.config import Config\n",
-    "from model import ICNet, ICNet_BN"
+    "from model_infer import ICNet, ICNet_BN"
    ]
   },
   {
@@ -41,11 +50,11 @@
       "ADE20K_eval_list               ./data/list/ade20k_val_list.txt\n",
       "ADE20K_train_list              ./data/list/ade20k_train_list.txt\n",
       "BATCH_SIZE                     16\n",
-      "CITYSCAPES_DATA_DIR            /data/cityscapes_dataset/cityscape/\n",
+      "CITYSCAPES_DATA_DIR            /home/b920405/git/ENet/Cityscapes/\n",
       "CITYSCAPES_eval_list           ./data/list/cityscapes_val_list.txt\n",
       "CITYSCAPES_train_list          ./data/list/cityscapes_train_list.txt\n",
       "IMG_MEAN                       [103.939 116.779 123.68 ]\n",
-      "INFER_SIZE                     (1024, 2048, 3)\n",
+      "INFER_SIZE                     (256, 512, 3)\n",
       "LAMBDA1                        0.16\n",
       "LAMBDA2                        0.4\n",
       "LAMBDA3                        1.0\n",
@@ -55,7 +64,7 @@
       "POWER                          0.9\n",
       "RANDOM_SEED                    1234\n",
       "SAVE_NUM_IMAGES                4\n",
-      "SAVE_PRED_EVERY                50\n",
+      "SAVE_PRED_EVERY                500\n",
       "SNAPSHOT_DIR                   ./snapshots/\n",
       "TRAINING_SIZE                  [720, 720]\n",
       "TRAINING_STEPS                 60001\n",
@@ -66,14 +75,14 @@
       "model_type                     trainval\n",
       "model_weight                   ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "param\n",
-      "   ignore_label                255\n",
       "   eval_size                   [1025, 2049]\n",
+      "   num_classes                 19\n",
       "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
       "   train_list                  ./data/list/cityscapes_train_list.txt\n",
-      "   data_dir                    /data/cityscapes_dataset/cityscape/\n",
-      "   eval_steps                  500\n",
+      "   ignore_label                255\n",
       "   name                        cityscapes\n",
-      "   num_classes                 19\n",
+      "   eval_steps                  500\n",
+      "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
       "random_mirror                  False\n",
       "random_scale                   False\n",
       "\n",
@@ -100,7 +109,7 @@
     "    model_weight = './model/cityscapes/icnet_cityscapes_trainval_90k.npy'\n",
     "    \n",
     "    # Define default input size here\n",
-    "    INFER_SIZE = (1024, 2048, 3)\n",
+    "    INFER_SIZE = (256, 512, 3)\n",
     "                  \n",
     "cfg = InferenceConfig(dataset, is_training=False, filter_scale=filter_scale)\n",
     "cfg.display()"
@@ -122,18 +131,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Restore from ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n"
+      "input= input:0\n",
+      "output= conv6_cls/BiasAdd:0\n",
+      "Restore from ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
+      "The checkpoint has been created, step: 90000\n"
      ]
     }
    ],
    "source": [
-    "# Create graph here \n",
-    "model = model_config[cfg.model_type]\n",
-    "net = model(cfg=cfg, mode='inference')\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    # Create graph here \n",
+    "    model = model_config[cfg.model_type]\n",
+    "    net = model(cfg=cfg, mode='inference')\n",
     "\n",
-    "# Create session & restore weight!\n",
-    "net.create_session()\n",
-    "net.restore(cfg.model_weight)"
+    "    # Create session & restore weight!\n",
+    "    net.create_session()\n",
+    "    net.restore(cfg.model_weight)\n",
+    "    net.save(net.get_loader(), './snapshots', 90000)\n",
+    "\n",
+    "    graphdef = graph.as_graph_def()\n",
+    "    tf.train.write_graph(graphdef, './snapshots', 'semanticsegmentation_ICNet.pbtxt', as_text=True)"
    ]
   },
   {
