--- a/demo.ipynb
+++ b/demo.ipynb
@@ -54,7 +54,7 @@
       "CITYSCAPES_eval_list           ./data/list/cityscapes_val_list.txt\n",
       "CITYSCAPES_train_list          ./data/list/cityscapes_train_list.txt\n",
       "IMG_MEAN                       [103.939 116.779 123.68 ]\n",
-      "INFER_SIZE                     (256, 512, 3)\n",
+      "INFER_SIZE                     (1, 256, 512, 3)\n",
       "LAMBDA1                        0.16\n",
       "LAMBDA2                        0.4\n",
       "LAMBDA3                        1.0\n",
@@ -75,14 +75,14 @@
       "model_type                     trainval\n",
       "model_weight                   ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "param\n",
-      "   eval_size                   [1025, 2049]\n",
-      "   num_classes                 19\n",
-      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
-      "   train_list                  ./data/list/cityscapes_train_list.txt\n",
-      "   ignore_label                255\n",
-      "   name                        cityscapes\n",
-      "   eval_steps                  500\n",
       "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
+      "   train_list                  ./data/list/cityscapes_train_list.txt\n",
+      "   eval_steps                  500\n",
+      "   ignore_label                255\n",
+      "   num_classes                 19\n",
+      "   eval_size                   [1025, 2049]\n",
+      "   name                        cityscapes\n",
+      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
       "random_mirror                  False\n",
       "random_scale                   False\n",
       "\n",
@@ -109,7 +109,7 @@
     "    model_weight = './model/cityscapes/icnet_cityscapes_trainval_90k.npy'\n",
     "    \n",
     "    # Define default input size here\n",
-    "    INFER_SIZE = (256, 512, 3)\n",
+    "    INFER_SIZE = (1, 256, 512, 3)\n",
     "                  \n",
     "cfg = InferenceConfig(dataset, is_training=False, filter_scale=filter_scale)\n",
     "cfg.display()"
