--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -24,7 +24,7 @@
     "\n",
     "from tqdm import trange\n",
     "from utils.config import Config\n",
-    "from model_infer import ICNet, ICNet_BN"
+    "from model import ICNet, ICNet_BN"
    ]
   },
   {
@@ -50,11 +50,11 @@
       "ADE20K_eval_list               ./data/list/ade20k_val_list.txt\n",
       "ADE20K_train_list              ./data/list/ade20k_train_list.txt\n",
       "BATCH_SIZE                     16\n",
-      "CITYSCAPES_DATA_DIR            /home/b920405/git/ENet/Cityscapes/\n",
+      "CITYSCAPES_DATA_DIR            /home/d0407/Cityscapes/\n",
       "CITYSCAPES_eval_list           ./data/list/cityscapes_val_list.txt\n",
       "CITYSCAPES_train_list          ./data/list/cityscapes_train_list.txt\n",
       "IMG_MEAN                       [103.939 116.779 123.68 ]\n",
-      "INFER_SIZE                     (1, 256, 512, 3)\n",
+      "INFER_SIZE                     (256, 512, 3)\n",
       "LAMBDA1                        0.16\n",
       "LAMBDA2                        0.4\n",
       "LAMBDA3                        1.0\n",
@@ -75,14 +75,14 @@
       "model_type                     trainval\n",
       "model_weight                   ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "param\n",
-      "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
-      "   train_list                  ./data/list/cityscapes_train_list.txt\n",
       "   eval_steps                  500\n",
+      "   data_dir                    /home/d0407/Cityscapes/\n",
+      "   name                        cityscapes\n",
+      "   eval_size                   [1025, 2049]\n",
+      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
       "   ignore_label                255\n",
       "   num_classes                 19\n",
-      "   eval_size                   [1025, 2049]\n",
-      "   name                        cityscapes\n",
-      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
+      "   train_list                  ./data/list/cityscapes_train_list.txt\n",
       "random_mirror                  False\n",
       "random_scale                   False\n",
       "\n",
@@ -109,7 +109,7 @@
     "    model_weight = './model/cityscapes/icnet_cityscapes_trainval_90k.npy'\n",
     "    \n",
     "    # Define default input size here\n",
-    "    INFER_SIZE = (1, 256, 512, 3)\n",
+    "    INFER_SIZE = (256, 512, 3)\n",
     "                  \n",
     "cfg = InferenceConfig(dataset, is_training=False, filter_scale=filter_scale)\n",
     "cfg.display()"
@@ -131,10 +131,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input= input:0\n",
-      "output= conv6_cls/BiasAdd:0\n",
       "Restore from ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
-      "The checkpoint has been created, step: 90000\n"
+      "The checkpoint has been created, step: 90000\n",
+      "input:0\n",
+      "Reshape_1:0\n",
+      "(1, 256, 512, 3)\n"
      ]
     }
    ],
@@ -149,6 +150,10 @@
     "    net.create_session()\n",
     "    net.restore(cfg.model_weight)\n",
     "    net.save(net.get_loader(), './snapshots', 90000)\n",
+    "\n",
+    "    print(net.img_placeholder.name)\n",
+    "    print(net.output.name)\n",
+    "    print(net.output.shape)\n",
     "\n",
     "    graphdef = graph.as_graph_def()\n",
     "    tf.train.write_graph(graphdef, './snapshots', 'semanticsegmentation_ICNet.pbtxt', as_text=True)"
@@ -297,14 +302,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
