--- a/demo.ipynb
+++ b/demo.ipynb
@@ -75,14 +75,14 @@
       "model_type                     trainval\n",
       "model_weight                   ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "param\n",
-      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
+      "   eval_size                   [1025, 2049]\n",
+      "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
       "   num_classes                 19\n",
       "   train_list                  ./data/list/cityscapes_train_list.txt\n",
-      "   eval_size                   [1025, 2049]\n",
       "   name                        cityscapes\n",
       "   ignore_label                255\n",
+      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
       "   eval_steps                  500\n",
-      "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
       "random_mirror                  False\n",
       "random_scale                   False\n",
       "\n",
@@ -125,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -134,8 +136,8 @@
       "Restore from ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "The checkpoint has been created, step: 90000\n",
       "input:0\n",
-      "Reshape_1:0\n",
-      "(1, 256, 512, 3)\n"
+      "crop_to_bounding_box/Slice:0\n",
+      "(1, 256, 512, 19)\n"
      ]
     }
    ],
