--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/usr/local/lib/python2.7/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -50,7 +50,7 @@
       "ADE20K_eval_list               ./data/list/ade20k_val_list.txt\n",
       "ADE20K_train_list              ./data/list/ade20k_train_list.txt\n",
       "BATCH_SIZE                     16\n",
-      "CITYSCAPES_DATA_DIR            /home/b920405/git/ENet/Cityscapes/\n",
+      "CITYSCAPES_DATA_DIR            /home/d0407/Cityscapes/\n",
       "CITYSCAPES_eval_list           ./data/list/cityscapes_val_list.txt\n",
       "CITYSCAPES_train_list          ./data/list/cityscapes_train_list.txt\n",
       "IMG_MEAN                       [103.939 116.779 123.68 ]\n",
@@ -75,14 +75,14 @@
       "model_type                     trainval\n",
       "model_weight                   ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "param\n",
+      "   eval_steps                  500\n",
+      "   data_dir                    /home/d0407/Cityscapes/\n",
+      "   name                        cityscapes\n",
       "   eval_size                   [1025, 2049]\n",
-      "   data_dir                    /home/b920405/git/ENet/Cityscapes/\n",
+      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
+      "   ignore_label                255\n",
       "   num_classes                 19\n",
       "   train_list                  ./data/list/cityscapes_train_list.txt\n",
-      "   name                        cityscapes\n",
-      "   ignore_label                255\n",
-      "   eval_list                   ./data/list/cityscapes_val_list.txt\n",
-      "   eval_steps                  500\n",
       "random_mirror                  False\n",
       "random_scale                   False\n",
       "\n",
@@ -136,7 +136,7 @@
       "Restore from ./model/cityscapes/icnet_cityscapes_trainval_90k.npy\n",
       "The checkpoint has been created, step: 90000\n",
       "input:0\n",
-      "crop_to_bounding_box/Slice:0\n",
+      "ResizeBilinear_19:0\n",
       "(1, 256, 512, 19)\n"
      ]
     }
@@ -304,14 +304,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
